2005-06-15  Francois Marier  <francois@serioushack.com>

	* src/shaders/GlassShader.cpp, ShinyBumpMapShader.cpp,
	HorizonMapping.cpp, JeweledShader.cpp, LargeTexture.cpp,
	Textures.cpp, Derivatives.cpp, BumpMapShader.cpp, DiscoShader.cpp,
	CelShader.cpp, PhongShader.cpp, SatinShader.cpp, WorleyShader.cpp,
	HomomorphicShader.cpp, LuciteShader.cpp, EnvMapShader.cpp,
	DummyShader.cpp, AlgebraShader.cpp: Make use of normalize_path()
	to support textures on Windows too. 

2005-06-07  Francois Marier  <francois@serioushack.com>

	* src/shaders/TangentArrows.cpp, EdgeDetection.cpp, EdgeGooch.cpp,
	HairShader.cpp, Logo.cpp, src/ShrikeCanvas.cpp: Rename
	glMultiTexCoordNARB to glMultiTexCoordN if GL_VERSION_1_4 is defined.

2005-06-06  Francois Marier  <francois@serioushack.com>

	* src/shaders, src/HDRImages: Remove ShUnclamped.
	Change AttribNf textures to AttribNfub.
	Specify the value type when constructing host memory.

2005-05-09  Stefanus Du Toit  <sjdutoit@uwaterloo.ca>

	* configure.ac (GL_CHECK_GL_HEADERS): Include the GL
	libraries. OS X build works now, but I get run-time OpenGL
	errors. Sigh.

	* config/gl.m4: Updated from latest Sh version.

	* Everywhere OpenGL headers are included use the appropriate path
	on OS X.

	* bootstrap: Replace with latest bootstrap from Sh. This includes
	lots of fixes for OS X.

2005-05-08  Stefanus Du Toit  <sjdutoit@uwaterloo.ca>

	* src/Makefile.am (*_CPPFLAGS): Use -I$(srcdir)/HDRImages instead
	of -IHDRImages in order to allow out-of-source building.

2005-04-25  Francois Marier  <francois@serioushack.com>
	
	* src/utilimpl.hpp: Remove this file and move its content to the
	core library.

	* src/shaders/Checkerboard.cpp, JeweledShader.cpp: Replace "sstep"
	with "smoothstep" since this function has been moved to the core.
	
	* src/shaders/VectorText.cpp, NoiseShader.cpp: Replace
	"smoothstep" with "deprecated_smoothstep" since these shaders
	appears to be using a cubic smoothstep function whereas the